[gd_scene load_steps=4 format=3 uid="uid://dl64hmyxcmidc"]

[ext_resource type="Script" path="res://scenes/PowerUps/PowerUp.gd" id="1_xhdu8"]
[ext_resource type="Texture2D" uid="uid://cbrqqucki2l86" path="res://assets/Skull/Orange Particle.png" id="2_ra307"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p0ect"]
radius = 6.0

[node name="PowerUp" type="Area2D"]
script = ExtResource("1_xhdu8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ra307")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_p0ect")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
